# criu-coordinator

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: lint.yml  test.yml
completions/: README.md
completions/bash/: criu-coordinator
completions/fish/: criu-coordinator.fish
completions/zsh/: _criu-coordinator
example-config/: criu-coordinator.json
proto/: image.proto
src/: cli.rs  client.rs  constants.rs  errors.rs  lib.rs  logger.rs  main.rs  pipeline.rs  server.rs
src/k8s/: checkpoint.rs  client.rs  coordinator.rs  discovery.rs  mod.rs
src/pipeline/: criu.rs  monitor.rs  ord_by.rs  protobuf.rs  streamer.rs  unix_pipe.rs
src/server/: client_status.rs
tests/: Makefile  common.rs  coordination_logic.rs  criu_e2e.rs  e2e_containers.rs  e2e_coordination.rs  e2e_criu.rs  kubescr-add-dependencies.py  loop.c  tcp-client.c  tcp-server.c
tests/c1/: criu-coordinator.json
tests/c2/: criu-coordinator.json
tests/c3/: criu-coordinator.json
tests/k8s/: dependencies.json  minikube.sh  test-pod.yml
