[package]
name = "criu-coordinator"
version = "0.1.0"
authors = ["Radostin Stoyanov <radostin.stoyanov@eng.ox.ac.uk>"]
description = "Coordinates checkpointing and restore among CRIU processes in distributed applications."
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
clap_complete = "4.1.5"
log = { version = "0.4", features = ["std"] }
json = "*"
libc = "0.2"
nix = "0.26.2"
slab = "0.4.8"
lazy_static = "1.4.0"
serde = "1.0.159"
bytes = "1.4.0"
prost = "0.11.8"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
config = "0.13.1"
reqwest = { version = "0.12.14", features = ["rustls-tls"] }

# K8s client lib
kube = "0.99.0"
k8s-openapi = { version = "0.24.0", features = ["v1_32"] }
tokio = { version = "1.44.1", features = ["full"] }

[build-dependencies]
prost-build = "0.11.8"
